# metaStrain

./: README.md  download_reference.sh  environment.yml  meta_sample.report  pattern_construction.sh  pyproject.toml  species_pattern.txt  strain_identifiy.sh  strain_identify.sh
code/: Assembly_summary_select.cc  Constants_obtained_2.cc  Extract_cds_sequences.cc  Extract_genome_sequences.cc  Extract_mapping_location.cc  Identification_abundance_1_nomulti.cc  Identification_abundance_2_new.cc  Identification_simple_design_0213.cc  Identification_statistic.cc  Statistics_0301.cc  abundance_2  abundance_nomulti  assembly_select  evaluation_1.cc  extract_cds  extract_genome  iden  map_location  species_path.cc  statis_0301  statistic
code/convex-quadratic-programming/: Array.hh  SolveQuadProg  Strain_mathfind.cc  a.out  build.sh  main.cc
code/patterns/: Extract_centroid_sequence-1004.cc  Extract_cga_reduced_0825.cc  Extract_mus_reduced_0828.cc  Extract_unique_pattern_0810.cc  Extract_unique_pattern_supple.cc  Extract_unique_pattern_supple_0828.cc  Minimal_Unique_Substrings_0221.cc  Solve_uclust_output_1.cc  Solve_uclust_output_2.cc  Solve_uclust_output_3.cc  Supplementary_method_0813.cc  analysis_1  analysis_1.cc  analysis_2  analysis_2.cc  centroid  interspecies_cga_check.cc  minimal  musadd  uclust_1  uclust_2  uclust_3  upadd
metastrain/: __init__.py  cli.py
metastrain/scripts/: download_reference.sh  pattern_construction.sh  species_selection.sh  strain_identify.sh
