[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metastrain"
version = "0.1.0"
description = "metaStrain strain identification toolkit"
authors = [{name = "Qi"}]
requires-python = ">=3.8"

[project.scripts]
metastrain = "metastrain.cli:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["metastrain"]


# 新增
[tool.setuptools]
include-package-data = true

# 新增
[tool.setuptools.package-data]
metastrain = [
    "scripts/*.sh"
]
